first iteration of website registration and login fused with guacamole

--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -8,8 +8,6 @@ Profile
 <body class="text-center">
 <br>
 <h1 class="h3 mb-3 font-weight-normal">Profile information</h1>
-Username: username
-<br>
-E-Mail: usermail@mail.com
+Username: {{ current_user.name }}
 </body>
 {% endblock %}
