--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,7 +19,7 @@
           <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/" id="nav-home">Home</a>
           </li>
-          {% if true %}
+          {% if current_user.is_authenticated %}
           <li class="nav-item">
           <a class="nav-link active" href="/logout" id="nav-logout">Logout</a>
           </li>
